--- a/Week1/HelloWorldGPU.ipynb
+++ b/Week1/HelloWorldGPU.ipynb
@@ -24,49 +24,43 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mmmovania/CUDA_Spring2023_GoogleColab/blob/main/Week1/HelloWorldGPU.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mmmovania/CUDA_Spring2023/blob/main/Week1/HelloWorldGPU.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kBUHmmqQHOS-",
-        "outputId": "0bdb1b1a-7f87-4d18-ab16-72ed06bc54bf"
+        "outputId": "24a84655-2c03-41d4-bed0-b548e8e4502e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/usr/local\n",
-            "  File: cuda -> /usr/local/cuda-11.2\n",
-            "  Size: 20        \tBlocks: 0          IO Block: 4096   symbolic link\n",
-            "Device: 37h/55d\tInode: 2490466     Links: 1\n",
-            "Access: (0777/lrwxrwxrwx)  Uid: (    0/    root)   Gid: (    0/    root)\n",
-            "Access: 2023-01-06 03:49:08.245253118 +0000\n",
-            "Modify: 2023-01-06 03:49:08.141242994 +0000\n",
-            "Change: 2023-01-06 03:49:08.141242994 +0000\n",
-            " Birth: -\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
-            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-s7u83rod\n",
-            "  Running command git clone --filter=blob:none --quiet https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-s7u83rod\n",
+            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-idkw8ky7\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-idkw8ky7\n",
             "  Resolved https://github.com/andreinechaev/nvcc4jupyter.git to commit aac710a35f52bb78ab34d2e52517237941399eff\n",
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "The nvcc_plugin extension is already loaded. To reload it, use:\n",
-            "  %reload_ext nvcc_plugin\n"
+            "Building wheels for collected packages: NVCCPlugin\n",
+            "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4304 sha256=f8eb39c3fb3af5b4e7a5a8cd91064e555a14161a698f584e11840e9e3e5348e5\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-l3zx0ils/wheels/f3/08/cc/e2b5b0e1c92df07dbb50a6f024a68ce090f5e7b2316b41756d\n",
+            "Successfully built NVCCPlugin\n",
+            "Installing collected packages: NVCCPlugin\n",
+            "Successfully installed NVCCPlugin-0.0.2\n",
+            "created output directory at /content/src\n",
+            "Out bin /content/result.out\n"
           ]
         }
       ],
       "source": [
-        "%cd /usr/local/\n",
-        "!rm -rf cuda\n",
-        "!ln -s /usr/local/cuda-11.2 /usr/local/cuda\n",
-        "!stat cuda\n",
         "!pip install git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
         "%load_ext nvcc_plugin"
       ]
@@ -81,15 +75,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aikKbs6TMEp6",
-        "outputId": "82905687-3cd5-4894-88b5-516b95a695ed"
+        "outputId": "64311a7c-0d99-401f-8b72-27410a20184b"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fri Jan  6 03:49:13 2023       \n",
+            "Sat Jan  7 08:27:21 2023       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -98,7 +92,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   50C    P0    25W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+            "| N/A   49C    P0    28W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -136,9 +130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P71PB1boHhgz",
-        "outputId": "365e162a-35d7-4556-a9d0-e197abd08e02"
+        "outputId": "9b6ddb23-8279-4b62-94f0-72f742fbd6bf"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
