--- a/Week1/GettingStarted.ipynb
+++ b/Week1/GettingStarted.ipynb
@@ -24,41 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mmmovania/CUDA_Spring2023_GoogleColab/blob/main/Week1/GettingStarted.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%cd /usr/local/ \n",
-        "!rm -rf cuda\n",
-        "!ln -s /usr/local/cuda-11.2 /usr/local/cuda\n",
-        "!stat cuda"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "f9kE2LumQ_x0",
-        "outputId": "0b456b78-88fd-45fe-e64b-722e32cc7ab6"
-      },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/usr/local\n",
-            "  File: cuda -> /usr/local/cuda-11.2\n",
-            "  Size: 20        \tBlocks: 0          IO Block: 4096   symbolic link\n",
-            "Device: 37h/55d\tInode: 2490466     Links: 1\n",
-            "Access: (0777/lrwxrwxrwx)  Uid: (    0/    root)   Gid: (    0/    root)\n",
-            "Access: 2023-01-06 03:42:28.724350319 +0000\n",
-            "Modify: 2023-01-06 03:42:28.612340780 +0000\n",
-            "Change: 2023-01-06 03:42:28.612340780 +0000\n",
-            " Birth: -\n"
-          ]
-        }
+        "<a href=\"https://colab.research.google.com/github/mmmovania/CUDA_Spring2023/blob/main/Week1/GettingStarted.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -71,15 +37,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EjNS_Mw5RyRq",
-        "outputId": "0aa2f65d-9366-426e-cb85-043ddaa16a27"
+        "outputId": "18e61f7f-f3b6-4ca6-e9ca-904d48c76243"
       },
-      "execution_count": 20,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fri Jan  6 03:42:34 2023       \n",
+            "Sat Jan  7 08:28:42 2023       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -88,7 +54,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   46C    P0    26W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+            "| N/A   70C    P0    28W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -113,9 +79,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S_8Qp7DFR1pO",
-        "outputId": "a27a027a-1a64-41e9-930a-d3dfe6cc1b64"
+        "outputId": "e383ee87-4bc5-4e35-d263-18b8215ba196"
       },
-      "execution_count": 21,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,9 +106,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ESIKGJ-KSCWh",
-        "outputId": "83ca4b3c-b60c-4b1b-8831-5606e4879cae"
+        "outputId": "d163ed4d-1a05-4e61-ec26-6cc3f1b199c2"
       },
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,10 +116,17 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
-            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-7p3cf00g\n",
-            "  Running command git clone --filter=blob:none --quiet https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-7p3cf00g\n",
+            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-x6dr6u8s\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-x6dr6u8s\n",
             "  Resolved https://github.com/andreinechaev/nvcc4jupyter.git to commit aac710a35f52bb78ab34d2e52517237941399eff\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Building wheels for collected packages: NVCCPlugin\n",
+            "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4304 sha256=1cda6eba1c5b13a244348ffd658d8937d374730d47cba3f8e37dae82dc2e3439\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-b5zoyn68/wheels/f3/08/cc/e2b5b0e1c92df07dbb50a6f024a68ce090f5e7b2316b41756d\n",
+            "Successfully built NVCCPlugin\n",
+            "Installing collected packages: NVCCPlugin\n",
+            "Successfully installed NVCCPlugin-0.0.2\n"
           ]
         }
       ]
@@ -168,16 +141,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rNZf0cLDSFDi",
-        "outputId": "1fb6b225-2dde-43a8-d103-d1f30cdbf9f9"
+        "outputId": "9d616510-1db9-4150-b17f-ddc163937f06"
       },
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The nvcc_plugin extension is already loaded. To reload it, use:\n",
-            "  %reload_ext nvcc_plugin\n"
+            "created output directory at /content/src\n",
+            "Out bin /content/result.out\n"
           ]
         }
       ]
@@ -197,9 +170,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AYEsmJRsSIcA",
-        "outputId": "0e3e958f-2c5d-4073-95bb-f333a0135abc"
+        "outputId": "2cdfa0d4-28ba-4c16-fd62-15b2892a697e"
       },
-      "execution_count": 24,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
