--- a/Week1/TestCustom.ipynb
+++ b/Week1/TestCustom.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TestCustom.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOt0D86ihyRHz1ngjXDjdNW",
+      "authorship_tag": "ABX9TyNy5siYb6jbic5Va3V0O8WS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,56 +25,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mmmovania/CUDA_Spring2023_GoogleColab/blob/main/Week1/TestCustom.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mmmovania/CUDA_Spring2023/blob/main/Week1/TestCustom.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "This jupyter notebook shows you how to compile CUDA code manually. We first do the required setup of symbolic links to enable compilation of CUDA code inside jupyter notebook environment. "
-      ],
-      "metadata": {
-        "id": "F3zI_PbsM4iX"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UTuaHG0vryRN",
-        "outputId": "a003ad76-afa0-4d3a-8370-515af0664e92"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/usr/local\n",
-            "  File: cuda -> /usr/local/cuda-11.2\n",
-            "  Size: 20        \tBlocks: 0          IO Block: 4096   symbolic link\n",
-            "Device: 34h/52d\tInode: 2490373     Links: 1\n",
-            "Access: (0777/lrwxrwxrwx)  Uid: (    0/    root)   Gid: (    0/    root)\n",
-            "Access: 2023-01-06 04:06:00.099784178 +0000\n",
-            "Modify: 2023-01-06 04:05:59.982775528 +0000\n",
-            "Change: 2023-01-06 04:05:59.982775528 +0000\n",
-            " Birth: -\n"
-          ]
-        }
-      ],
-      "source": [
-        "%cd /usr/local\n",
-        "!rm -rf cuda\n",
-        "!ln -s /usr/local/cuda-11.2 /usr/local/cuda\n",
-        "!stat cuda"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Next, we try to run the nvcc compiler for compiling C code inside Google colab environment. If everything goes well, we should get the version of the nvcc compiler written on the output."
+        "We run the nvcc compiler for compiling C code inside Google colab environment. If everything goes well, we should get the version of the nvcc compiler written on the output."
       ],
       "metadata": {
         "id": "VCiN1wGYNlij"
@@ -90,9 +47,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DaNUb1B8tGK6",
-        "outputId": "29c2cbd1-1ed3-4657-9211-231d2c8d2f51"
+        "outputId": "0d9eb009-344d-4409-e922-bcf37be20ab3"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +67,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Next, we try to compile our own code test.cu. Before running this cell, please ensure that there is a file test.cu in your content folder on the left side. You can either create the test.cu file manually and upload it or you can generate it. We will do the later process of generating the code from jupyter notebook. Run the following cell and it should output test.cu insides your content folder. "
+        "Next, we try to compile our own code test.cu. You can either create the test.cu file manually and upload it or you can generate it. We will do the later process of generating the code from jupyter notebook. Run the following cell and it should output test.cu insides your content folder. "
       ],
       "metadata": {
         "id": "eqHVk6coNyDm"
@@ -139,12 +96,12 @@
       ],
       "metadata": {
         "id": "ET5WUljjO-OP",
-        "outputId": "79695c99-7938-4dc3-968a-6e4c9ae0c233",
+        "outputId": "490c4fd6-4425-4024-f9af-3db28eefc4cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +129,7 @@
       "metadata": {
         "id": "sAHeA1vLtJ5q"
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -194,9 +151,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "heFe3XJIu-0r",
-        "outputId": "0ce567ba-3d46-40fd-ba4e-7b361e65d76f"
+        "outputId": "27b1f790-1d36-4868-d15e-ca6b62e5cf2d"
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
