--- a/Week4/Simple2D.ipynb
+++ b/Week4/Simple2D.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Simple2D.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/mmmovania/CUDA_Spring2023/blob/main/Week4/Simple2D.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -39,8 +22,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
@@ -67,6 +50,40 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "prZ5rRtQ91Lu",
+        "outputId": "9b00f5cc-5bb1-4f70-d17b-db4e16bcb2e0"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " 0  0  0  0  1  1  1  1  2  2  2  2  3  3  3  3 \n",
+            " 0  0  0  0  1  1  1  1  2  2  2  2  3  3  3  3 \n",
+            " 0  0  0  0  1  1  1  1  2  2  2  2  3  3  3  3 \n",
+            " 0  0  0  0  1  1  1  1  2  2  2  2  3  3  3  3 \n",
+            " 4  4  4  4  5  5  5  5  6  6  6  6  7  7  7  7 \n",
+            " 4  4  4  4  5  5  5  5  6  6  6  6  7  7  7  7 \n",
+            " 4  4  4  4  5  5  5  5  6  6  6  6  7  7  7  7 \n",
+            " 4  4  4  4  5  5  5  5  6  6  6  6  7  7  7  7 \n",
+            " 8  8  8  8  9  9  9  9 10 10 10 10 11 11 11 11 \n",
+            " 8  8  8  8  9  9  9  9 10 10 10 10 11 11 11 11 \n",
+            " 8  8  8  8  9  9  9  9 10 10 10 10 11 11 11 11 \n",
+            " 8  8  8  8  9  9  9  9 10 10 10 10 11 11 11 11 \n",
+            "12 12 12 12 13 13 13 13 14 14 14 14 15 15 15 15 \n",
+            "12 12 12 12 13 13 13 13 14 14 14 14 15 15 15 15 \n",
+            "12 12 12 12 13 13 13 13 14 14 14 14 15 15 15 15 \n",
+            "12 12 12 12 13 13 13 13 14 14 14 14 15 15 15 15 \n",
+            "\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "%%cu\n",
         "//Taken from: https://code.google.com/p/stanford-cs193g-sp2010/wiki/TutorialMultidimensionalKernelLaunch\n",
@@ -135,41 +152,24 @@
         "  free(host_array);\n",
         "  cudaFree(device_array);\n",
         "}"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "prZ5rRtQ91Lu",
-        "outputId": "9b00f5cc-5bb1-4f70-d17b-db4e16bcb2e0"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " 0  0  0  0  1  1  1  1  2  2  2  2  3  3  3  3 \n",
-            " 0  0  0  0  1  1  1  1  2  2  2  2  3  3  3  3 \n",
-            " 0  0  0  0  1  1  1  1  2  2  2  2  3  3  3  3 \n",
-            " 0  0  0  0  1  1  1  1  2  2  2  2  3  3  3  3 \n",
-            " 4  4  4  4  5  5  5  5  6  6  6  6  7  7  7  7 \n",
-            " 4  4  4  4  5  5  5  5  6  6  6  6  7  7  7  7 \n",
-            " 4  4  4  4  5  5  5  5  6  6  6  6  7  7  7  7 \n",
-            " 4  4  4  4  5  5  5  5  6  6  6  6  7  7  7  7 \n",
-            " 8  8  8  8  9  9  9  9 10 10 10 10 11 11 11 11 \n",
-            " 8  8  8  8  9  9  9  9 10 10 10 10 11 11 11 11 \n",
-            " 8  8  8  8  9  9  9  9 10 10 10 10 11 11 11 11 \n",
-            " 8  8  8  8  9  9  9  9 10 10 10 10 11 11 11 11 \n",
-            "12 12 12 12 13 13 13 13 14 14 14 14 15 15 15 15 \n",
-            "12 12 12 12 13 13 13 13 14 14 14 14 15 15 15 15 \n",
-            "12 12 12 12 13 13 13 13 14 14 14 14 15 15 15 15 \n",
-            "12 12 12 12 13 13 13 13 14 14 14 14 15 15 15 15 \n",
-            "\n",
-            "\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "include_colab_link": true,
+      "name": "Simple2D.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
