--- a/Week6/DotProductGPU.ipynb
+++ b/Week6/DotProductGPU.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/mmmovania/CUDA_Spring2023/blob/main/Week6/DotProductGPU.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -38,8 +22,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
@@ -66,6 +50,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GYZ627HO-XKd",
+        "outputId": "7594c97b-c3ac-46fc-f406-c9c32199ecb7"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Does GPU value 2.57236e+13 = 2.57236e+13?\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "%%cu\n",
         "#include <stdio.h>\n",
@@ -153,6 +155,7 @@
         "                              cudaMemcpyDeviceToHost ), \"cudaMemCpy3\" );\n",
         "\n",
         "    // finish up on the CPU side\n",
+        "    \n",
         "    c = 0;\n",
         "    for (int i=0; i<blocksPerGrid; i++) {\n",
         "        c += partial_c[i];\n",
@@ -175,25 +178,23 @@
         "\t\tcudaDeviceReset();\n",
         "\t\treturn 0;\n",
         "}"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GYZ627HO-XKd",
-        "outputId": "7594c97b-c3ac-46fc-f406-c9c32199ecb7"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Does GPU value 2.57236e+13 = 2.57236e+13?\n",
-            "\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
