Dynamic Parallism compilation error removed

--- a/Week12/CUDA_DynamicParallelism.ipynb
+++ b/Week12/CUDA_DynamicParallelism.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "CUDA_DynamicParallelism.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/mmmovania/CUDA_Spring2023/blob/main/Week12/CUDA_DynamicParallelism.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -39,8 +22,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
@@ -67,8 +50,28 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GYZ627HO-XKd",
+        "outputId": "281b6cba-3005-48a7-adb7-3cf93cef7522"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "/tmp/tmp21ykqr3p/4329d123-c15b-4f72-b8d7-c52c0c634ad8.cu(46): error: kernel launch from __device__ or __global__ functions requires separate compilation mode\n",
+            "\n",
+            "1 error detected in the compilation of \"/tmp/tmp21ykqr3p/4329d123-c15b-4f72-b8d7-c52c0c634ad8.cu\".\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "%%cu\n",
+        "%%writefile dp.cu\n",
         "//example given here: https://stackoverflow.com/questions/64516177/call-kernel-inside-cuda-kernel\n",
         "\n",
         "//this example wont work on Colab GPU since the required compute capability for \n",
@@ -155,27 +158,34 @@
         "\n",
         "\treturn 0;\n",
         "}"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GYZ627HO-XKd",
-        "outputId": "281b6cba-3005-48a7-adb7-3cf93cef7522"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/tmp/tmp21ykqr3p/4329d123-c15b-4f72-b8d7-c52c0c634ad8.cu(46): error: kernel launch from __device__ or __global__ functions requires separate compilation mode\n",
-            "\n",
-            "1 error detected in the compilation of \"/tmp/tmp21ykqr3p/4329d123-c15b-4f72-b8d7-c52c0c634ad8.cu\".\n",
-            "\n"
-          ]
-        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!nvcc -rdc=true dp.cu -o dp\n",
+        "!./dp"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "include_colab_link": true,
+      "name": "CUDA_DynamicParallelism.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
