--- a/Week6/DotProductGPU.ipynb
+++ b/Week6/DotProductGPU.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/mmmovania/CUDA_Spring2023/blob/main/Week6/DotProductGPU.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,59 +12,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OB2MY3st-VUm",
-        "outputId": "eaa03176-07c8-4eb3-e368-084d830a3a0d"
+        "outputId": "7565ea53-b8f6-4b22-a2c4-d6c2788630b5"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
-            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-d6n3s9_e\n",
-            "  Running command git clone --filter=blob:none --quiet https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-d6n3s9_e\n",
-            "  Resolved https://github.com/andreinechaev/nvcc4jupyter.git to commit aac710a35f52bb78ab34d2e52517237941399eff\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Building wheels for collected packages: NVCCPlugin\n",
-            "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4304 sha256=8e4eb567694f2733afb23465f3a6bff6b2bcd6b345bc98eba64006e977272772\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-h5x4ty_l/wheels/f3/08/cc/e2b5b0e1c92df07dbb50a6f024a68ce090f5e7b2316b41756d\n",
-            "Successfully built NVCCPlugin\n",
-            "Installing collected packages: NVCCPlugin\n",
-            "Successfully installed NVCCPlugin-0.0.2\n",
-            "created output directory at /content/src\n",
-            "Out bin /content/result.out\n"
+            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-tov55nss\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-tov55nss\n",
+            "  Resolved https://github.com/andreinechaev/nvcc4jupyter.git to commit 781ff5b76ba6c4c2d80dcbbec9983e147613cc71\n",
+            "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "The nvcc4jupyter extension is already loaded. To reload it, use:\n",
+            "  %reload_ext nvcc4jupyter\n"
           ]
         }
       ],
       "source": [
         "!pip install git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
-        "%load_ext nvcc_plugin"
+        "%load_ext nvcc4jupyter"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GYZ627HO-XKd",
-        "outputId": "7594c97b-c3ac-46fc-f406-c9c32199ecb7"
+        "outputId": "74efedc5-d6dd-475c-de9e-8166679a5d32"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "Does GPU value 2.57236e+13 = 2.57236e+13?\n",
-            "\n"
+            "UsageError: Cell magic `%%cu` not found.\n"
           ]
         }
       ],
@@ -95,10 +88,10 @@
         "        temp += a[tid] * b[tid];\n",
         "        tid += blockDim.x * gridDim.x;\n",
         "    }\n",
-        "    \n",
+        "\n",
         "    // set the cache values\n",
         "    cache[cacheIndex] = temp;\n",
-        "    \n",
+        "\n",
         "    // synchronize threads in this block\n",
         "    __syncthreads();\n",
         "\n",
@@ -115,9 +108,9 @@
         "    if (cacheIndex == 0)\n",
         "        c[blockIdx.x] = cache[0];\n",
         "}\n",
-        "  \n",
         "\n",
-        "int main() { \n",
+        "\n",
+        "int main() {\n",
         "\t\tfloat   *a, *b, c, *partial_c;\n",
         "    float   *dev_a, *dev_b, *dev_partial_c;\n",
         "\n",
@@ -144,7 +137,7 @@
         "    checkCudaErr( cudaMemcpy( dev_a, a, N*sizeof(float),\n",
         "                              cudaMemcpyHostToDevice ), \"cudaMemCpy1\" );\n",
         "    checkCudaErr( cudaMemcpy( dev_b, b, N*sizeof(float),\n",
-        "                              cudaMemcpyHostToDevice ) , \"cudaMemCpy2\"); \n",
+        "                              cudaMemcpyHostToDevice ) , \"cudaMemCpy2\");\n",
         "\n",
         "    dot<<<blocksPerGrid,threadsPerBlock>>>( dev_a, dev_b,\n",
         "                                            dev_partial_c );\n",
@@ -155,7 +148,7 @@
         "                              cudaMemcpyDeviceToHost ), \"cudaMemCpy3\" );\n",
         "\n",
         "    // finish up on the CPU side\n",
-        "    \n",
+        "\n",
         "    c = 0;\n",
         "    for (int i=0; i<blocksPerGrid; i++) {\n",
         "        c += partial_c[i];\n",
@@ -184,8 +177,8 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
